test/types/type_variables/deitz/test_clone_class1a.good
error: '_retval' has mixed basic types:( int64 float64 null ) 
  called from test_clone_class1a.chpl:4
test_clone_class1a.chpl:1: class foo:: 'x' has mixed basic types:( int64 float64 null ) 
<internal>:0: expression has mixed basic types:( int64 float64 null ) 
  called from test_clone_class1a.chpl:4
<internal>:0: expression has mixed basic types:( int64 float64 null ) 
  called from test_clone_class1a.chpl:10
<internal>:0: expression has mixed basic types:( int64 float64 null ) 
  called from test_clone_class1a.chpl:14
<internal>:0: expression has mixed basic types:( int64 float64 null ) 
  called from test_clone_class1a.chpl:4
<internal>:0: expression has mixed basic types:( int64 float64 null ) 
  called from test_clone_class1a.chpl:4
<internal>:0: expression has mixed basic types:( int64 float64 null ) 
  called from test_clone_class1a.chpl:4
<internal>:0: expression has mixed basic types:( int64 float64 null ) 
<internal>:0: expression has mixed basic types:( int64 float64 null ) 
test_clone_class1a.chpl:4: expression has mixed basic types:( int64 float64 null ) 
  called from test_clone_class1a.chpl:12
  called from test_clone_class1a.chpl:16
test_clone_class1a.chpl:10: expression has mixed basic types:( int64 float64 null ) 
test_clone_class1a.chpl:14: expression has mixed basic types:( int64 float64 null ) 
fail: fatal error, program does not type
